posiGen_FullsendBox/src/objects/Customer_Portal_Global_Setting__c.object
<CustomObject>
    <fields>
        <fullName>How_To_Save_More__c</fullName>
        <description>WYSIWYG Editor to manage &quot;How do I save more money&quot; content</description>
        <label>How To Save More</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Minimum_Net_Savings_for_Display__c</fullName>
        <description>If a customer&apos;s net savings for the most recent 12 month period is below this figure, do not display the charts. Direct the customer to CSR.</description>
        <inlineHelpText>If a customer&apos;s net savings for the most recent 12 month period is below this figure, do not display the charts. Direct the customer to CSR.</inlineHelpText>
        <label>Minimum Net Savings for Display</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Posigen_BCC_for_Referrals__c</fullName>
        <description>The &quot;Refer a friend&quot; link on the customer savings page will BCC this address.</description>
        <inlineHelpText>The &quot;Refer a friend&quot; link on the customer savings page will BCC this address.</inlineHelpText>
        <label>Posigen BCC for Referrals</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Energy_Inflation_Rate__c</fullName>
        <description>using a flat escalation to apply to &quot;future projected savings&quot; in the Customer Portal</description>
        <inlineHelpText>using a flat escalation to apply to &quot;future projected savings&quot; in the Customer Portal</inlineHelpText>
        <label>Projected Annual Energy Inflation Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Refer_a_Friend_Email_Body_Text__c</fullName>
        <description>Simple verbiage to prefill the email body on customer community Refer a Friend link.</description>
        <inlineHelpText>Simple verbiage to prefill the email body on customer community Refer a Friend link.</inlineHelpText>
        <label>Refer a Friend Email Body Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_a_Friend_Email_Subject__c</fullName>
        <description>Subject line for the Refer a Friend link</description>
        <inlineHelpText>Subject line for the Refer a Friend link</inlineHelpText>
        <label>Refer a Friend Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2016_Assumed_Cost_Per_kWh__c</fullName>
        <description>Customer Portal - using for conversion of Energy to $, may be more granular later</description>
        <inlineHelpText>Customer Portal - using for conversion of Energy to $, may be more granular later</inlineHelpText>
        <label>2016 Assumed Cost Per kWh</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Portal Global Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Portal Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>